# black-mesa

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  api.Dockerfile  black-mesa-logo  bot.Dockerfile  build.rs  discord.go  discord_errorHandler.go  discord_messageDeleteHandler.go  discord_messageEditHandler.go  discord_messageHandler.go  docker-compose.yml  docker-compose.yml.example  go.mod  go.sum  justfile  main.go  mkdocs.yml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml  docker.yml  docs.yml
admin/: admin.go  commands.go
antinuke/: antiChannels.go  antiMessages.go  antiRemoves.go
apiwrapper/: api.go  purges.go
automod/: automod.go  domains.go  invites.go  messages.go  strings.go  users.go  zalgo.go
automod/censor/: domains.go  invites.go  ip.go  strings.go  zalgo.go
automod/spam/: maxAttachments.go  maxLinks.go  maxMentions.go  max_attachments.go  max_emojis.go  max_length.go  max_links.go  max_mentions.go  max_messages.go  max_newlines.go  max_uppercase.go
black-mesa/: Cargo.toml
black-mesa/src/: main.rs  telemetry.rs
black-mesa/src/automod/: censor.rs  macros.rs  mod.rs  spam.rs
black-mesa/src/commands/: config.rs  groups.rs  misc.rs  mod.rs  moderation.rs  privileged.rs  router.rs  schema.rs
black-mesa/src/handler/: data.rs  handler.rs  help.rs  macros.rs  mod.rs  permissions.rs
black-mesa/src/workers/: expiry.rs  mod.rs
bm-lib/: Cargo.toml
bm-lib/src/: config.rs  emojis.rs  lib.rs  permissions.rs  util.rs
bm-lib/src/cache/: memory.rs  mod.rs  redis.rs
bm-lib/src/db/: config.rs  infractions.rs  mod.rs
bm-lib/src/discord/: audio.rs  commands.rs  embed.rs  error.rs  guild.rs  mod.rs  model.rs  permissions.rs  rest.rs  ws.rs
bm-lib/src/model/: automod.rs  config.rs  infraction.rs  mod.rs
config/: Automod.go  Commands.go  Config.go  Guild.go  MakeConfig.go  Moderation.go  Modules.go  Permissions.go  WebAccess.go  botInfo.go  cmds_get.go  cmds_makeMute.go  cmds_set.go  cmds_setup.go  config.go  permissions.go  punishments.go  staff.go  structs.go
consts/: api.go  automod.go  bot.go  emoji.go  permissions.go  purge.go  untrustworthy.go
db/: MakeConfig.go  cmds_makeMute.go  cmds_setup.go  config.go  db.go  guilds.go  mongo.go  permissions.go  staff.go  structs.go  untrustworthy.go  users.go
discord/: ErrorHandler.go  MessageDeleteHandler.go  MessageHandler.go  MessageUpdateHandler.go  OnAddHandler.go  OnMemberJoin.go  OnMemberRemove.go  OnMessageCreate.go  OnMessageDelete.go  OnMessageUpdate.go  OnReactionAdd.go  OnReady.go  discord.go  mux.go  regex.go  roles.go  router.go
docs/: index.md
docs/configuration/: full-example.md  import.md  index.md
docs/modules/: automod.md  bulletin.md  logging.md  moderation.md
docs/reference/: argument-types.md
docs/stylesheets/: extra.css
guilds/: prefix.go
guilds/permissions/: cmdLevel.go  userLevel.go
guilds/roles/: addRole.go  createRole.go  (+1 more)
info/: botInfo.go  guildInfo.go  userInfo.go
lavalink/: Dockerfile  application.yml
logging/: escape.go  logging.go
misc/: ErrorHandler.go  cmd_help.go  cmd_invite.go  cmd_ping.go  cmds_setup.go  help.go  invite.go  ping.go  regex.go  time.go
moderation/: TimedPunishments.go  ban.go  banfile.go  kick.go  logging.go  moderation.go  mute.go  punishments.go  purge.go  removeAction.go  removeInfraction.go  search.go  softban.go  strike.go  unban.go  unmute.go
mongodb/: guilds.go  mongo.go  structs.go  users.go
music/: commands.go  handlers.go  music.go  queue.go
redis/: redis.go
roles/: addRole.go
src/: config.rs  expiry.rs  handlers.rs  main.rs  telemetry.rs
structs/: config.go  guild.go  purges.go  untrustworthy.go  users.go
util/: ErrorHandler.go  consts.go  contentCheck.go  filteredCommand.go  noPermissionHandler.go  reasons.go  regex.go  snowflakes.go  stats.go  structTools.go  time.go  util.go
(+110 files in other folders)
