[workspace]
members = [
    "black-mesa",
    "mesa-api",
    "bm-lib"
]
resolver = "2"

[workspace.package]
name = "black-mesa"
version = "0.5.0"
edition = "2021"
authors = ["Tyler Thompson <yoitscore@gmail.com>"]

[workspace.dependencies]
bm-lib = { path = "bm-lib" }

[profile.dev]
debug = 0

#[profile.release]
#lto = true
#opt-level = 3
#codegen-units = 1
