[package]
name = "black-mesa"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
thiserror = "2.0"
opentelemetry = { version = "0.26" }
opentelemetry-otlp = { version = "0.26", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
tracing-opentelemetry = "0.27"
base64 = "0.22"
rustc_version = "0.4"
chrono = "0.4"
futures-util = "0.3"
url = "2.5"
lazy_static = "1.5"

bm-lib = { workspace = true }
